tests/fixtures/invalid/bool_pow_none.py
# Cannot power Bool and None
x: bool = True ** None
